--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+dataRetrieval 2.7.16
+===================
+* Changed the base URL for groundwater level services. 
+* Updated parameterCdFile
+
 dataRetrieval 2.7.15
 ===================
 * Update warning about upcoming changes to USGS water quality data.
