--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-dataRetrieval 2.7.16
+dataRetrieval 2.7.16.1
 ===================
 * Removed the forced "empty returns" for WQP, since the WQP now has properly formatted empty returns.
 * Moved the column parsing to a dedicated function for WQP.
@@ -8,6 +8,12 @@ dataRetrieval 2.7.16
 * siteInfo attribute for WQP queries converted to a full station return.
 * Cleaned up date conversion in WQP
 * Updated source for groundwater level data from waterservices to waterdata. Note that waterdata services will ALSO need updating within the next year, but this change will allow for some time to make changes.
+
+dataRetrieval 2.7.16
+===================
+* Changed the base URL for groundwater level services since GW Levels RDB formats will be discontinued after August 5, 2024. 
+* Groundwater queries can no longer support siteStatus and siteType. Updates to the services are expected in the next year and those queries will return.
+* Updated parameterCdFile.
 
 dataRetrieval 2.7.15
 ===================
